<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/simpsons_donut_texture"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#aff4f00b"
       >


        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            >
            <ImageView
                android:id="@+id/detail_item_image"
                android:layout_centerHorizontal="true"
                android:layout_width="168dp"
                android:layout_height="257dp"
                android:background="@drawable/fallout_boy"
                />

        </android.support.v7.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"/>
                <TextView
                    android:id="@+id/detail_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/detail_item_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold"

                    android:text="Price"
                    />
                <TextView
                    android:id="@+id/detail_item_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold"

                    android:text="Type"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="About Item:"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    />
                <TextView
                    android:id="@+id/detail_item_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="description"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="#a6f4f00b"
            />

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            >

            <ImageButton
                android:id="@+id/detail_add_item"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/add_donut_small"
                android:backgroundTint = "#7e1515"
            />

            <ImageButton
                android:id="@+id/detail_go_to_cart"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="60dp"
                android:background="@drawable/cart_small"
                android:backgroundTint = "#7e1515"
                />

            <ImageButton
                android:id="@+id/detail_go_back_to_store"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="60dp"

                android:background="@drawable/storeicon"
                android:backgroundTint = "#7e1515"
                />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>









