...
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:layout_marginLeft="33dp"/>


        <ImageButton
            android:id="@+id/go_to_checkout"
            android:background="@drawable/cart_small"
            android:backgroundTint = "#7e1515"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginLeft="33dp"/>

...
        android:layout_above="@id/barlayout"
        android:adjustViewBounds="true"
        />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:orientation="horizontal"
        android:layout_below="@id/store_pic_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/barlayout"
        android:foregroundGravity="center"
...
