...
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:textStyle="bold"
            android:textColor="#000"
            />
        <ImageButton
            android:id="@+id/delete_item"
            android:layout_above="@id/quantity"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/delete_donut_small"
            android:backgroundTint="#d8490817"
            android:layout_alignParentBottom="true"/>
...
